# -> Bug Fix
$ -> Language fix or change
+ -> Addition
^ -> Change
- -> Removed
! -> Note

24-Dev-2009 Andrew Eddie
 ^ Moved modal user field from com_users to jform library; fixed occurances in com_contacts.
 # Fixed bug in modal users list.
 ^ Complete MVC refactor of com_messages.
 ^ Applied patch [#19046] JDatabase::$_connection inaccessible, proposing a getConnection() method as the solution

23-Dev-2009 Ian MacLennan
 ^ Moved JUtility::sendMail and sendAdminMail to JMail and added appropriate proxy methods (thanks Arlen Walker)

23-Dec-2009 Andrew Eddie
 ^ Minor changes to jos_messages table schema.
 ^ Added chaining support to JDatabase::setQuery method.

21-Dec-2009 Louis Landry
+ Added setAdditionalUrlParam and getAdditionalUrlParam to JPagination to allow better URL manipulation for GET requests.  (thanks to Robert Deutz)

21-Dec-2009 Hannes Papenberg
+ Added unicode-slug ability. See JApplication::stringURLSafe() for usage
^ Standardized user plugin events. All events are now with "User" instead of "Users"
# Fixed reference notice in backend com_users user model
^ Changed JMail from an abstract to a normal class
^ Updated TinyMCE to 3.2.7

20-Dec-2009 Mark Dexter
+ Partial implementation of Category List in com_content (thanks to Andrea Tarr, Elin Waring, Angie Radtke)
+ Implement global and menu item parameters
# Fix 404 error in archive view (thanks to Elin Waring)

14-Dec-2009 Ian MacLennan
^ Modified JString to use phputf8 to support systems without mb_string

14-Dec-2009 Andrew Eddie
 # Fixed bug in installation and diff SQL. TEXT fields can't have defaults.

13-Dec-2009 Mark Dexter
^ Merged in com_content changes. Implement some params for Category List layout.
# Fixed read more param for articles.
# Fixed problem with reading params for custom layouts. Always load standard params for standard layouts.
# Fixes to module modal on menu assignments (thanks to Andrea Tarr).

13-Dec-2009 Andrew Eddie